[wip] Java 8 parser